# hotstuff_rs

./: .gitignore  0.2.md  Cargo.toml  Debug.txt  README.md  SPECIFICATION.md  Specification.md
.github/workflows/: deploy_docs.yml
docs/: Block Tree Rest API.md  Engine Thread.md  Protocol State Machine.md
example/: Cargo.toml
src/: actor.rs  algorithm.rs  app.rs  application.rs  basic_types.rs  block_tree.rs  config.rs  database.rs  engine.rs  event_bus.rs  events.rs  hotstuff.rs  identity.rs  lib.rs  listener.rs  logging.rs  messages.rs  msg_queue.rs  msg_types.rs  networking.rs  new_state.rs  node_tree.rs  pacemaker.rs  participants.rs  replica.rs  rest_api.rs  state.rs  state_machine.rs  stored_types.rs  sync_server.rs  types.rs
src/block_sync/: client.rs  messages.rs  mod.rs  server.rs
src/block_tree/: invariants.rs  mod.rs  pluggables.rs  variables.rs
src/block_tree/accessors/: app.rs  internal.rs  mod.rs  public.rs
src/hotstuff/: implementation.rs  messages.rs  mod.rs  network.rs  protocol.rs  roles.rs  sequence_flow.rs  specification.rs  types.rs  voting.rs
src/ipc/: conn_set.rs  connection_set.rs  crw_lock.rs  establisher.rs  handle.rs  managed_conn_set.rs  manager.rs  mod.rs  rw_tcpstream.rs  stream.rs
src/networking/: client.rs  messages.rs  mod.rs  network.rs  node_tree_api.rs  receiving.rs  sending.rs
src/node_tree/: REST API.md  api.rs  database.rs  mod.rs  node.rs  node_handle.rs  node_tree.rs  state.rs  storage.rs  stored_types.rs  types.rs  world_state.rs
src/pacemaker/: implementation.rs  messages.rs  mod.rs  protocol.rs  types.rs
src/progress_mode/: mod.rs  states.rs  view.rs
src/state/: app_block_tree_view.rs  block_tree.rs  block_tree_camera.rs  block_tree_snapshot.rs  invariants.rs  kv_store.rs  mod.rs  paths.rs  safety.rs  state_variables.rs  utilities.rs  write_batch.rs
src/sync_mode/: mod.rs  state.rs  sync_mode.rs
src/types/: basic.rs  block.rs  certificates.rs  collectors.rs  crypto_primitives.rs  data_types.rs  keypair.rs  mod.rs  signed_messages.rs  update_sets.rs  validator_set.rs  validators.rs  voting.rs
tests/: README.md  basic_consensus_and_validator_set_update_test.rs  block_sync_test.rs  multiple_validator_set_updates_test.rs  pacemaker_initial_view_sync_test.rs  progress_and_validator_set_update_test.rs  test.rs
tests/common/: logging.rs  mem_db.rs  mod.rs  network.rs  node.rs  number_app.rs  verifying_key_bytes.rs
types/: Cargo.toml
types/src/: base64url.rs  identity.rs  lib.rs  messages.rs  stored.rs
zero_two/: 0.2 draft 2.md  Cargo.toml
zero_two/src/: algorithm.rs  app.rs  config.rs  lib.rs  messages.rs  networking.rs  pacemaker.rs  persistence.rs  replica.rs  state.rs  sync_server.rs  tests.rs  types.rs  validator.rs
(+5 files in other folders)
