[package]
name = "hotstuff_rs"
version = "0.0.0"
description = "An implementation of the HotStuff consensus algorithm."
homepage = "https://parallelchain.io"
repository = "https://github.com/parallelchain-io/hotstuff_rs"
readme = "README.md"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9"
ed25519-dalek = "1"
pchain-types = "0.2"
# Dalek requires this minor version of rand.
rand = "0.7"
rocksdb = "0.19"
indexmap = "1.9"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
threadpool = "1.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
warp = "0.3"
