[package]
name = "hotstuff_rs"
version = "0.2.0"
description = "An implementation of the HotStuff consensus algorithm intended for production systems."
homepage = "https://parallelchain.io"
repository = "https://github.com/parallelchain-io/hotstuff_rs"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
borsh = "0.10"
ed25519-dalek = "1"
fern = "0.6"
log = "0.4" 
rand = "0.7"
sha2 = "0.10"