[package]
name = "hotstuff_rs_types"
version = "0.1.0"
license = "Apache-2.0"
description = "Types used in the implementation and the communication protocol of hotstuff-rs, made available as a separate crate with a minimal set of dependencies"
repository = "https://github.com/parallelchain-io/hotstuff-rs-types"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9"
ed25519-dalek = "1"
sha2 = "0.10"